# pixel-svg-smart

./: README.md  pyproject.toml
src/pixel_svg_smart/: __init__.py  main.py
