[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixel-svg-smart"
version = "0.0.1"
authors = [
  { name="Ethan Chapman", email="ethan@we3chapmans.com" },
]
description = "Generate SVGs from pixel art"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion"
]
dependencies = [
    "numpy>=2.0.0,<3",
    "imageio>=2.35.1,<3"
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"